; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_metadata.c_convert_type.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_metadata.c_convert_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"output\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @convert_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_type(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @getTypeOutputInfo(i32 %9, i32* %8, i32* %7)
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @OidIsValid(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @TYPE_ERROR(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %17

17:                                               ; preds = %14, %3
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @OidFunctionCall1(i32 %19, i32 %20)
  %22 = call i32 @DirectFunctionCall1(i32 %18, i32 %21)
  ret i32 %22
}

declare dso_local i32 @getTypeOutputInfo(i32, i32*, i32*) #1

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32 @TYPE_ERROR(i8*, i32) #1

declare dso_local i32 @DirectFunctionCall1(i32, i32) #1

declare dso_local i32 @OidFunctionCall1(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
